Week 1 Unit 5: MANAGING DATA MODELS AND INTERNATIONALIZATION - app.controller - model - i18n properties

--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -11,5 +11,6 @@
 				height="600px"/>
 		</pages>
 	</Carousel>
-	<Button text="Say Hello" press="onShowHello"></Button>
+	<Button text="{i18n>showHelloButtonText}" press="onShowHello"></Button>
+	<Input value="{helloPanel>/recipient/name}" description="Hello {helloPanel>/recipient/name}" valueLiveUpdate="true" width="60%"></Input>
 </mvc:View>
