Unit 2: Working with Expressions and Formatters expression binding custom formatter bonus: fixed Destination (now uses real data)

--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -85,8 +85,19 @@
 											<ObjectListItem
 												title="{Name}"
 												number="{Price}"
-												intro="{ProductID}"
-												numberUnit="{CurrencyCode}" />
+												numberUnit="{CurrencyCode}"
+												numberState="{= ${Price} > 500 ? 'Error' : 'Success'}"
+												intro="{ProductID}">
+												<firstStatus>
+													<ObjectStatus text="{
+														parts: [
+															{path: 'WeightUnit'},
+															{path: 'WeightMeasure'}
+														],
+														formatter : '.formatter.delivery'
+													}"/>
+												</firstStatus>
+											</ObjectListItem>
 										</items>
 									</List>
 								</content>
