--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -53,8 +53,8 @@
 							</IconTabFilter>
 							<IconTabFilter text="{i18n>dataBindingFilter}" key="db">
 								<content>
-									<List id="productsList" items="{ path: '/ProductSet', sorter: { path: 'Category', group: true } }" growing="true" growingThreshold="5"
-										growingScrollToLoad="false">
+									<List id="productsList" items="{ path: '/ProductSet', parameters : { expand: 'ToSupplier' }, sorter: { path: 'Category', group: true } }"
+										growing="true" growingThreshold="5" growingScrollToLoad="false">
 										<headerToolbar>
 											<Toolbar>
 												<Title text="{i18n>productListTitle}"/>
@@ -69,6 +69,11 @@
 												<firstStatus>
 													<ObjectStatus text="{ parts: [ {path: 'WeightUnit'}, {path: 'WeightMeasure'} ], formatter : '.formatter.delivery' }"/>
 												</firstStatus>
+												<secondStatus>
+													<ObjectStatus
+														title="{i18n>statusDeliveryFrom}"
+														text="{ToSupplier/Address/City}"/>
+												</secondStatus>
 											</ObjectListItem>
 										</items>
 									</List>
@@ -76,7 +81,8 @@
 										<l:Grid>
 											<Text text="{i18n>productDetailPanelID}: {ProductID}"/>
 											<Text text="{i18n>productDetailPanelName}: {Name}"/>
-											<Text text="{i18n>productDetailPanelDescription}: {i18n>linebreak} {Description}"/> <!-- workaround for linebreak bug SAPUI5 (created a translation for linebreak-->
+											<Text text="{i18n>productDetailPanelDescription}: {i18n>linebreak} {Description}"/>
+											<!-- workaround for linebreak bug SAPUI5 (created a translation for linebreak-->
 											<Text text="{i18n>productDetailPanelPrice}: {Price}"/>
 										</l:Grid>
 									</Panel>
