--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -3,6 +3,7 @@
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns:semantic="sap.f.semantic"
+	xmlns:core="sap.ui.core"
 	xmlns:form="sap.ui.layout.form">
 
 	<semantic:SemanticPage
@@ -28,60 +29,10 @@
 			/>
 			<ObjectAttribute text="{Name}"/>
 			
-			<Panel
-				class="sapUiResponsiveMargin"
-				width="auto"
-				headerText="{i18n>productTitle}"
-				expandable="{device>/system/phone}"
-				expanded="true">
-				<content>
-					<form:SimpleForm id="objectForm">
-						<form:content>
-							<Label text="{i18n>productCategoryLabel}"/>
-							<Text text="{Category}"/>
-							<Label text="{i18n>productNameLabel}"/>
-							<Text text="{Name}"/>
-							<Label text="{i18n>productWeightLabel}"/>
-							<Text text="{= ${WeightMeasure} + ' ' + ${WeightUnit}}"/>
-						</form:content>
-					</form:SimpleForm>
-				</content>
-			</Panel>
+			<mvc:XMLView viewName="opensap.manageproducts.ManageProducts.view.ProductDetails"/>
 			
-			<Panel
-				class="sapUiResponsiveMargin"
-				width="auto"
-				headerText="{i18n>supplierTitle}"
-				expandable="{device>/system/phone}"
-				expanded="false">
-				<content>
-					<List id="supplierList">
-						<items>
-							<StandardListItem icon="sap-icon://building" title="{ToSupplier/CompanyName}"/>
-							<StandardListItem icon="sap-icon://email" title="{ToSupplier/EmailAddress}"/>
-							<StandardListItem icon="sap-icon://world" title="{ToSupplier/WebAddress}"/>
-							<StandardListItem icon="sap-icon://phone" title="{ToSupplier/PhoneNumber}"/>
-							<StandardListItem icon="sap-icon://map" title="{ToSupplier/Address/City}"/>
-						</items>
-					</List>
-				</content>
-			</Panel>
+			<core:Fragment fragmentName="opensap.manageproducts.ManageProducts.view.SupplierInfo" type="XML"/>
 			
-			<Panel
-				class="sapUiResponsiveMargin sapUiHideOnPhone"
-				width="auto"
-				headerText="{i18n>mapTitle}">
-				<Image src="{
-					parts: [
-						'ToSupplier/Address/Street',
-						'ToSupplier/Address/PostalCode',
-						'ToSupplier/Address/City',
-						'ToSupplier/Address/Country'
-					],
-					formatter: '.formatter.formatMapUrl'
-				}" />
-			</Panel>
-		
 		</semantic:headerContent>
 		
 		<semantic:sendEmailAction>
