Unit 1 - Exercises: Navigation and Routing Concepts Implement a new “add” route Implement a new “add” view Implement a new “add” controller

--- a/webapp/view/Worklist.view.xml
+++ b/webapp/view/Worklist.view.xml
@@ -83,6 +83,7 @@
 									priority="NeverOverflow"/>
 							</layoutData>
 						</SearchField>
+						<Button id="addButton" icon="sap-icon://add" press="onAdd" />
 					</OverflowToolbar>
 				</headerToolbar>
 
