WEEK 4 UNIT 3 WRITING UNIT TESTS WITH QUNIT

--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -26,6 +26,15 @@
 				}"
 				numberUnit="{CurrencyCode}">
 		<ObjectAttribute text="{Name}" />
+		<statuses>
+					<ObjectStatus text="{
+						parts: [
+							{path: 'WeightUnit'},
+							{path: 'WeightMeasure'}
+						],
+						formatter : '.formatter.delivery'
+					}"/>
+				</statuses>
 		</ObjectHeader>
 
 
