WEEK 4 UNIT 5 CREATING CUSTOM CONTROLS 1	Creating the Skeleton for a New Custom Control 2	Build a First Version of the Product Rating Control 3	Add Event Handling and Finalize the Control 4	Add the Control to Our APP

--- a/webapp/view/ProductDetails.view.xml
+++ b/webapp/view/ProductDetails.view.xml
@@ -1,8 +1,9 @@
 <mvc:View
-	controllerName="opensap.manageproducts.ManageProducts.controller.ProductDetails"
+	controllerName="opensap.manageproducts.ManageProducts.controller.Object"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
-	xmlns:form="sap.ui.layout.form">
+	xmlns:form="sap.ui.layout.form"
+	xmlns:course="opensap.manageproducts.ManageProducts.control">
 	<Panel
 		class="sapUiResponsiveMargin"
 		width="auto"
@@ -20,6 +21,8 @@
 					<Text text="{= ${WeightMeasure} + ' ' + ${WeightUnit}}"/>
 				</form:content>
 			</form:SimpleForm>
+			
+			<course:ProductRate valueSubmit="onRatingChanged"/>
 		</content>
 	</Panel>
 </mvc:View>
